# py-tarpit

./: Dockerfile  docker-compose.yaml  pyproject.toml
py_tarpit/: main.py
py_tarpit/logging_config/: __init__.py
