[tool.poetry]
name = "py-tarpit"
version = "0.1.0"
description = ""
authors = ["leonid-dev <zvegencev.l@mail366.com>"]
readme = "README.md"
packages = [{ include = "py_tarpit" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
